# mattermost-qt

./: .gitignore  CMakeLists.txt  README.md  build-config.h.in  config.h.in  libdatachannel  mingw-w64-x86_64.cmake  resource.qrc
.github/workflows/: build.yaml
img/: icon.xcf
resources/: createIcons.sh  mattermost-qt.appdata.xml.in  mattermost-qt.desktop.in
sources/: ChannelItem.cpp  ChannelItem.h  ChannelItemWidget.h  ChannelList.cpp  ChannelList.h  ChannelListForTeam.cpp  ChannelListForTeam.h  Settings.h  SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.ui  config.h  fwd.h  log.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
sources/backend/: Backend.cpp  Backend.h  EmojiMap.cpp  EmojiMap.h  HTTPConnector.cpp  HTTPConnector.h  HttpResponseCallback.cpp  HttpResponseCallback.h  NetworkRequest.cpp  NetworkRequest.h  QByteArrayCreator.cpp  QByteArrayCreator.h  RequestTracker.cpp  RequestTracker.h  ServerDialogsMap.cpp  ServerDialogsMap.h  Storage.cpp  Storage.h  WebSocketConnector.cpp  WebSocketConnector.h  WebSocketEventHandler.cpp  WebSocketEventHandler.h
sources/backend/calls/: CallsConnector.cpp  CallsConnector.h
sources/backend/emoji/: EmojiDefs.h  EmojiInfo.cpp  EmojiInfo.h  EmojiMap.cpp
sources/backend/events/: ChannelCreatedEvent.cpp  ChannelCreatedEvent.h  ChannelUpdatedEvent.cpp  ChannelUpdatedEvent.h  ChannelViewedEvent.cpp  ChannelViewedEvent.h  NewDirectChannelEvent.cpp  NewDirectChannelEvent.h  NewUserEvent.cpp  NewUserEvent.h  OpenDialogEvent.cpp  OpenDialogEvent.h  PostDeletedEvent.cpp  PostDeletedEvent.h  PostEditedEvent.cpp  PostEditedEvent.h  PostEvent.cpp  PostEvent.h  PostReactionAddedEvent.cpp  PostReactionAddedEvent.h  PostReactionRemovedEvent.h  StatusChangeEvent.cpp  StatusChangeEvent.h  TypingEvent.cpp  TypingEvent.h  UserAddedToChannelEvent.cpp  UserAddedToChannelEvent.h  UserRemovedFromChannelEvent.cpp  UserRemovedFromChannelEvent.h  UserTeamEvent.cpp  UserTeamEvent.h  UserUpdatedEvent.cpp  UserUpdatedEvent.h
sources/backend/types/: BackendChannel.cpp  BackendChannel.h  BackendChannelMember.cpp  BackendChannelMember.h  BackendChannelProperties.h  BackendDirectChannelsTeam.cpp  BackendDirectChannelsTeam.h  BackendError.cpp  BackendError.h  BackendFile.cpp  BackendFile.h  BackendLoginData.cpp  BackendLoginData.h  BackendNewPollData.h  BackendNotifyPreps.cpp  BackendNotifyPreps.h  BackendPoll.cpp  BackendPoll.h  BackendPost.cpp  BackendPost.h  BackendTeam.cpp  BackendTeam.h  BackendTeamMember.cpp  BackendTeamMember.h  BackendTimeZone.cpp  BackendTimeZone.h  BackendUser.cpp  BackendUser.h  BackendUserProps.cpp  BackendUserProps.h
sources/channel-tree/: ChannelItem.cpp  ChannelItem.h  ChannelItemWidget.cpp  ChannelItemWidget.h  ChannelItemWidget.ui  ChannelTree.cpp  ChannelTree.h  ChannelTreeItem.h  TeamItem.cpp  TeamItem.h
sources/channel-tree-dialogs/: AddNewDirectChannelDialog.cpp  AddNewDirectChannelDialog.h  AddUserToChannelDialog.cpp  AddUserToChannelDialog.h  EditChannelPropertiesDialog.cpp  EditChannelPropertiesDialog.h  EditChannelPropertiesDialog.ui  FilterListDialog.cpp  FilterListDialog.h  FilterListDialog.ui  TeamChannelsListDialog.cpp  TeamChannelsListDialog.h  UserListDialog.cpp  UserListDialog.h  UserListDialog.ui  UserListDialogForNewDirect.cpp  UserListDialogForNewDirect.h  UserListDialogForTeam.cpp  UserListDialogForTeam.h  ViewChannelMembersListDialog.cpp  ViewChannelMembersListDialog.h  ViewTeamMembersListDialog.cpp  ViewTeamMembersListDialog.h
sources/channel-tree/channel-item/: DirectChannelItem.cpp  DirectChannelItem.h  GroupChannelItem.cpp  GroupChannelItem.h
sources/channel-tree/team-item/: DirectTeamItem.cpp  DirectTeamItem.h  GroupTeamItem.cpp  GroupTeamItem.h  TeamItem.cpp  TeamItem.h
sources/chat-area/: ChatArea.cpp  ChatArea.h  ChatArea.ui  MessageSeparatorWidget.cpp  MessageSeparatorWidget.h  MessageSeparatorWidget.ui  MessageTextEditWidget.cpp  MessageTextEditWidget.h  MessageWidget.cpp  MessageWidget.h  MessageWidget.ui  OutgoingAttachmentList.cpp  OutgoingAttachmentList.h  OutgoingPostCreator.cpp  OutgoingPostCreator.h  PinnedPostsList.cpp  PinnedPostsList.h  PinnedPostsList.ui  PostSeparatorWidget.cpp  PostSeparatorWidget.h  PostSeparatorWidget.ui  PostWidget.cpp  PostWidget.h  PostWidget.ui  PostsListWidget.cpp  PostsListWidget.h  ResizableListWidget.cpp  ResizableListWidget.h
sources/chat-area/attachments/: AttachedBinaryFile.cpp  AttachedBinaryFile.h  AttachedBinaryFile.ui  AttachedImageFile.cpp  AttachedImageFile.h  AttachedImageFile.ui  AttachmentListWidget.cpp  AttachmentListWidget.h  MessageAttachmentList.cpp  MessageAttachmentList.h  MessageAttachmentList.ui  MessageAttachmentListWidget.cpp  MessageAttachmentListWidget.h  PostAttachmentList.cpp  PostAttachmentList.h  PostAttachmentList.ui  PostAttachmentListWidget.cpp  PostAttachmentListWidget.h  PostPoll.cpp  PostPoll.h  PostPoll.ui
sources/chat-area/outgoing-post/: MessageTextEditWidget.cpp  MessageTextEditWidget.h  NewPollDialog.cpp  NewPollDialog.h  NewPollDialog.ui  OutgoingAttachmentList.cpp  OutgoingAttachmentList.h  OutgoingPostCreator.cpp  OutgoingPostCreator.h  OutgoingPostCreator.ui  OutgoingPostPanel.cpp  OutgoingPostPanel.h  (+1 more)
sources/choose-emoji-dialog/: ChooseEmojiDialog.cpp  ChooseEmojiDialog.h  ChooseEmojiDialog.ui  ChooseEmojiDialogWrapper.cpp  ChooseEmojiDialogWrapper.h
sources/config/: Config.cpp  Config.h
sources/info-dialogs/: ChannelInfoDialog.cpp  ChannelInfoDialog.h  ChannelInfoDialog.ui  UserProfileDialog.cpp  UserProfileDialog.h  UserProfileDialog.ui
sources/login/: LoginDialog.cpp  LoginDialog.h  LoginDialog.ui
sources/new-direct-channel/: ChannelUsersListDialog.cpp  ChannelUsersListDialog.h  NewDirectChannelDialog.cpp  NewDirectChannelDialog.h  NewDirectChannelDialog.ui  UserListDialog.cpp  UserListDialog.h  UserListDialog.ui  ViewTeamChannelsDialog.cpp  ViewTeamChannelsDialog.h
sources/preview-window/: FilePreview.cpp  FilePreview.h  FilePreview.ui
sources/user-profile/: UserProfileDialog.cpp  UserProfileDialog.ui
tools/: CMakeLists.txt  emojiMapGenerator.cpp  svgToIco.sh  svgToPng.sh
(+39 files in other folders)
